WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300732
[WebGPU Swift] 1 crash and 3 text failures with Swift backend
https://bugs.webkit.org/show_bug.cgi?id=300732
Summary
[WebGPU Swift] 1 crash and 3 text failures with Swift backend
Mike Wyrzykowski
Reported
2025-10-14 15:01:07 PDT
With the latest Swift compiler, running: ./Tools/Scripts/run-webkit-tests --release --no-build http/tests/webgpu/webgpu results in: [1/4] http/tests/webgpu/webgpu/api/operation/adapter/requestDevice.html failed unexpectedly (com.apple.WebKit.GPU.Development crashed [pid=81974]) [2/4] http/tests/webgpu/webgpu/api/validation/encoding/cmds/render/dynamic_state.html failed unexpectedly (text diff) [3/4] http/tests/webgpu/webgpu/api/validation/encoding/queries/resolveQuerySet.html failed unexpectedly (text diff) [4/4] http/tests/webgpu/webgpu/api/validation/queue/destroyed/query_set.html failed unexpectedly (text diff)
Attachments
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2025-10-14 15:03:31 PDT
Thread 10 name: WebGPU work queue Crashed:: : 0 com.apple.WebGPU 0x102a7c3c0 WebGPU.CommandEncoder.beginRenderPass(descriptor:) 1 com.apple.WebGPU 0x102a78d3c CommandEncoder_beginRenderPass_thunk(commandEncoder:descriptor:) 2 com.apple.WebGPU 0x102a00db4 WebGPU::CommandEncoder::beginRenderPass(WGPURenderPassDescriptor const&) 3 com.apple.WebGPU 0x102a0aa28 wgpuCommandEncoderBeginRenderPass(WGPUCommandEncoderImpl*, WGPURenderPassDescriptor const*) 4 com.apple.WebCore 0x115ef1bfc WebCore::WebGPU::CommandEncoderImpl::beginRenderPass(WebCore::WebGPU::RenderPassDescriptor const&) ...
Geoffrey Garen
Comment 2
2025-10-14 15:03:48 PDT
Exception Type: EXC_BREAKPOINT (SIGTRAP)
Geoffrey Garen
Comment 3
2025-10-14 15:04:03 PDT
Seems like this must a Swift precondition failure of some sort.
Mike Wyrzykowski
Comment 4
2025-10-14 16:32:05 PDT
missing nil check is the reason for the crash
Radar WebKit Bug Importer
Comment 5
2025-10-14 16:32:19 PDT
<
rdar://problem/162639798
>
Geoffrey Garen
Comment 6
2025-10-14 20:19:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52363
EWS
Comment 7
2025-10-15 06:37:17 PDT
Committed
301553@main
(71e9079abf4a): <
https://commits.webkit.org/301553@main
> Reviewed commits have been landed. Closing PR #52363 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug