[WebGPU Swift] 1 crash and 3 text failures with Swift backend https://bugs.webkit.org/show_bug.cgi?id=300732 rdar://162639798

Reviewed by Mike Wyrzykowski.

Converting from Objective-C to Swift changes a nil dereference from a no-op to
a crash. (That's bad! rdar://159961640)

I manually adopted nullability annotations for data members and return
values in our Objective-C++ classes that have partial Swift implementations. This
makes it a compile-time error to forget the null check in Swift, at least for the
values I've so-annotated.

I had to disable -Wnullability-completeness in the same files because once you
do any nullability annotation clang requires you to do them all, which is too
much change in one patch, and also totally useless since it would mean adding
nullability annotations to C++-only interfaces, which get no enforcement.

Canonical link: https://commits.webkit.org/301553@main